# barema-lattes

./: .gitignore  compose.yaml  pyproject.toml
migrations/versions/: 06e5c8690286_.py  7381cc269531_.py  9fb486be01c0_.py
src/barema/: __main__.py  main.py  prompts.py
src/barema/core/: generate_report.py  report_csv.py  report_generation.py  report_production.py  setup.py
src/barema/db/: models.py
src/barema/services/: ai_evaluation.py  ai_extraction.py  ai_sumula.py  ai_tag.py  download_lattes.py  openAlex.py  pre_process_projects.py  queries.py  report_utils.py
