[project]
name = "barema"
version = "0.1.0"
description = ""
authors = [{name = "meirelesgc",email = "geu_docsta@outlook.com"}]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = ["tqdm (>=4.67.3,<5.0.0)", "polars (>=1.38.1,<2.0.0)", "httpx (>=0.28.1,<0.29.0)", "requests (>=2.32.5,<3.0.0)", "pydantic-settings (>=2.13.1,<3.0.0)", "sqlalchemy (>=2.0.47,<3.0.0)", "langchain-community (>=0.4.1,<0.5.0)", "langchain-core (>=1.2.16,<2.0.0)", "langchain-openai (>=1.1.10,<2.0.0)", "alembic (>=1.18.4,<2.0.0)", "psycopg (>=3.3.3,<4.0.0)", "xlsxwriter (>=3.2.9,<4.0.0)", "pymupdf (>=1.27.1,<2.0.0)", "xmltodict (>=1.0.4,<2.0.0)", "langchain (>=1.2.10,<2.0.0)", "pdfplumber (>=0.11.9,<0.12.0)", "click (>=8.3.1,<9.0.0)", "fastexcel (>=0.19.0,<0.20.0)"]

[tool.poetry]
packages = [{include = "barema", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
